Closed Bug 1226146 Opened 9 years ago Closed 9 years ago

fix sndio backend after webrtc 43 landing in 1198458

Categories

(Core :: WebRTC: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: gaston, Assigned: gaston)

References

Details

Attachments

(1 file)

No description provided.
Attached patch webrtc43-fwupSplinter Review
Fixes build for me, removed extra params in createThread calls, switched to thread.reset() instead of deleting the object as done in other backends, and replaced OVERRIDE by override;
Assignee: nobody → landry
Attachment #8689469 - Flags: review?(rjesup)
Blocks: 1198458
Attachment #8689469 - Flags: review?(rjesup) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: